# wrapless-lightning-node

./: .gitignore  Cargo.toml  README.md
apps/cli/: Cargo.toml
apps/cli/src/: cli.rs  close_channel.rs  force_close_channel.rs  get_invoice.rs  main.rs  nodeinfo.rs  open_channel.rs  send_payment.rs  utils.rs
crates/ldk/: Cargo.toml
crates/ldk/src/: bitcoind_client.rs  cli_wrapless.rs  common.rs  disk.rs  lib.rs  sweep.rs
src/: bitcoind_client.rs
