[package]
name = "ldk"
version = "0.1.0"
edition = "2018"

[dependencies]
base64 = { workspace = true }
bitcoin = { workspace = true }
lightning = { workspace = true }
lightning-block-sync = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
lightning-persister = { workspace = true }
chrono = { workspace = true }
lightning-background-processor = { workspace = true }
lightning-dns-resolver = { workspace = true }
lightning-net-tokio = { workspace = true }
rand = { workspace = true }
bitcoin-bech32 = { workspace = true }
